--- a/windsurf_deployment.yaml
+++ b/windsurf_deployment.yaml
@@ -1,6 +1,6 @@
 # Windsurf Deploys Configuration (Beta)
 # This is an auto-generated file used to store your app deployment configuration. Do not modify.
 # The ID of the project (different from project name) on the provider's system. This is populated as a way to update existing deployments.
-project_id: 4fd9c5a0-5b06-4f73-9dcf-2fd3c510fa3a
+project_id: ba5c96ae-80fa-4677-afa6-2f8bea7401c3
 # The framework of the web application (examples: nextjs, react, vue, etc.)
-framework: create-react-app
+framework: react
